fix: z-index

--- a/src/components/notebook_editor/components/edit_elements/edit_text/edit_text.module.scss
+++ b/src/components/notebook_editor/components/edit_elements/edit_text/edit_text.module.scss
@@ -1,6 +1,6 @@
 .wrap{
     position: fixed;
-    z-index: 1;
+    z-index: 10;
 }
 
 .edit_field{
